# nsg

./: CMakeLists.txt
compress/: CMakeLists.txt
compress/reordering/: GenerationVector.h  RecursiveGraphBisection.cpp  RecursiveGraphBisection.h  Reordering.cpp  Reordering.h  ReversGraph.h  TaskSyncQueue.h  ThreadPool.cpp  ThreadPool.h
compress/stream_vbyte/: StreamVByte.cpp  StreamVByte.h  StreamVByteDefine.h
faiss/: CMakeLists.txt  Clustering.cpp
faiss/utils/: distances.cpp  utils.cpp  utils.h
include/efanna2e/: heap.h  index.h  index_nsg.h  neighbor.h  priority_queue.h  test_helper.h  util.h
src/: index_nsg.cpp
tests/: CMakeLists.txt  test_compress.cpp  test_create_ground_truth.cpp  test_create_overlapping_shards.cpp  test_create_shards.cpp  test_faiss_kmeans_recall.cpp  test_faiss_kmeans_train.cpp  test_nsg_index.cpp  test_nsg_multi_build_index.cpp  test_nsg_multi_merge_index.cpp  test_nsg_optimized_multi_search.cpp  test_nsg_optimized_search.cpp  test_reordering.cpp  test_sample_data.cpp
